kubernetes.tf
resource "google_container_cluster" "container-cluster" {
  name                     = var.base
  location                 = "us-central1-a"
  remove_default_node_pool = true
  initial_node_count       = 1
  networking_mode          = "VPC_NATIVE"
  network                  = google_compute_network.network.self_link
  subnetwork               = google_compute_subnetwork.subnetwork.self_link
  deletion_protection      = false

  ip_allocation_policy {
    cluster_secondary_range_name  = "kubernetes-pods"
    services_secondary_range_name = "kubernetes-services"
  }

  master_authorized_networks_config {
    cidr_blocks {
      cidr_block = var.master_authorized_networks_config_ip
    }
  }

  private_cluster_config {
    enable_private_nodes    = true
    enable_private_endpoint = false
    master_ipv4_cidr_block  = "11.3.10.0/28"

    master_global_access_config {
      enabled = false
    }
  }

  master_auth {
    client_certificate_config {
      issue_client_certificate = false
    }
  }

  default_snat_status {
    disabled = true
  }

  workload_identity_config {
    workload_pool = "${var.project}.svc.id.goog"
  }

  gateway_api_config {
    channel = "CHANNEL_STANDARD"
  }
}

resource "google_container_node_pool" "node_pool" {
  provider = google-beta

  cluster    = google_container_cluster.container-cluster.name
  location   = "us-central1-a"
  name       = "${var.base}-pool"
  node_count = 2

  autoscaling {
    min_node_count = 2
    max_node_count = 4
  }

  node_config {
    disk_size_gb    = 15
    machine_type    = "n4a-standard-2"
    disk_type       = "hyperdisk-balanced"
    spot            = true
    service_account = module.service-accounts["node"].email
    oauth_scopes    = ["https://www.googleapis.com/auth/cloud-platform"]
    tags            = ["${var.base}-node-pool"]

    shielded_instance_config {
      enable_secure_boot          = true
      enable_integrity_monitoring = true
    }

    workload_metadata_config {
      mode = "GKE_METADATA"
    }
  }
}

# resource "google_compute_firewall" "ingress-controller" {
#   name    = "ingress-controller-kubernetes"
#   network = google_compute_network.network.name

#   allow {
#     protocol = "tcp"
#     ports    = ["8443", "8080"]
#   }

#   source_ranges = ["11.3.10.0/28"]
#   target_tags   = ["${var.base}-pool-node"]
# }
